# DS-PI-ProyectoIndividual

./: MakeDataDictionary.ipynb  Profile_Inicial_CanalVenta.html  Profile_Inicial_Cliente.html  Profile_Inicial_Compra.html  Profile_Inicial_Gasto.html  Profile_Inicial_Localidad.html  Profile_Inicial_Proveedor.html  Profile_Inicial_Sucursal.html  Profile_Inicial_TipoGasto.html  Profile_Inicial_Venta.html  Proyecto.ipynb  Proyecto_inicial.ipynb  Proyecto_propuesto.ipynb  README.md  diccionarys.py  profCliente.html  pyproject.toml
Datasets/: Clientes.csv
ds_pi_financiero/: Documents.slides.html  analisisf_financiero.ipynb  preliminar.ipynb
ds_pi_financiero/.ipynb_checkpoints/: analisisf_financiero-checkpoint.ipynb
ds_pi_proyectoindividual/: cargar.py  main.py  make_data_dictionary.py  normalizador.py
ds_pi_proyectoindividual/Datasets/: .~lock.CanalDeVenta.xlsx#
ds_pi_proyectoindividual/ReporteInicial/: Profile_Inicial_Localidad.html  Profile_Inicial_Proveedor.html  Profile_Inicial_Venta.html
ds_pi_proyectoindividual/notebooks/: Proyecto_inicial.ipynb  Proyecto_propuesto.ipynb  ReporteInicial.ipynb
proyecto02_finanzas/: Intentofallido.ipynb
