[tool.poetry]
name = "ds-pi-proyectoindividual"
version = "0.1.0"
description = ""
authors = ["Mirian Paredes"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.3"
seaborn = "^0.11.2"
pandas-profiling = "^3.2.0"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
